@@ -35,6 +35,7 @@ h3. Version 0.8 (NOT OFFICIALLY RELEASED YET)
 * Generalized @GroupCountPipe@ to have a value of @Map<Object,Number>@ instead of @Long@
 * Migrated @TablePipe@ and @Table@ from Gremlin
 * Simplified the semantics of @HasNextPipe@ (use @Pipe.hasNext()@ to accomplish previous behavior)
+* Added @MemoizePipe@ to memoize the mapping of a particular pipe
 
  ==<hr/>==
 
